# endless8

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: git-conventions.md  workflow-config.json
.specify/memory/: constitution.md
docs/: architecture.md
examples/: README.md  advanced.yaml  api-implementation.yaml  basic.yaml  calculator-tdd.yaml  check_hachimoku_score.py  ci-pipeline.yaml  code-quality.yaml  database-migration.yaml  hachimoku-quality-gate.yaml  haiku-creation.yaml  json-schema-validator.yaml  logic-puzzle.yaml  markdown-linter.yaml  primes-quality-gate.yaml  refactoring.yaml  research.yaml  tanka-chain.yaml  test-cov.yaml
specs/001-endless8-engine-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-endless8-engine-core/checklists/: requirements.md
specs/001-endless8-engine-core/contracts/: agents.py  cli.py  engine.py  history.py
specs/002-structured-criteria/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-structured-criteria/checklists/: requirements.md
specs/002-structured-criteria/contracts/: criteria.py  engine_flow.py
src/endless8/: __init__.py  engine.py  judgment.py  raw_log.py  state.py  task_manager.py
src/endless8/agents/: __init__.py  execution.py  intake.py  judgment.py  model_factory.py  summary.py
src/endless8/cli/: __init__.py  main.py
src/endless8/command/: __init__.py  executor.py
src/endless8/config/: __init__.py  settings.py
src/endless8/history/: __init__.py  history.py  knowledge_base.py  queries.py
src/endless8/models/: __init__.py  criteria.py  knowledge.py  progress.py  results.py  state.py  summary.py  task.py
tests/: conftest.py
tests/integration/: test_clarification.py  test_cli.py  test_command_criteria.py  test_context.py  test_loop_execution.py  test_persistence.py  test_research_task.py
tests/unit/: test_cli.py  test_command_executor.py  test_command_result_models.py  test_config_settings.py  test_criteria_filtering.py  test_criteria_models.py  test_engine.py  test_engine_raw_log.py  test_execution_agent.py  test_execution_agent_raw_log.py  test_history.py  test_intake_agent.py  test_judgment.py  test_judgment_agent.py  test_knowledge_base.py  test_model_factory.py  test_models.py  test_queries.py  test_raw_log.py  test_state.py  test_suggested_next_action.py  test_summary_agent.py  test_task_manager.py
