[project]
name = "endless8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claudecode-model",
    "duckdb>=1.4.3",
    "pydantic-ai>=1.46.0",
    "typer>=0.21.1",
]

[project.scripts]
endless8 = "endless8:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
claudecode-model = { git = "https://github.com/drillan/claudecode-model.git" }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
